--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript</title>
+    <title>Exercise 1</title>
+    <style>
+        * {
+            font-size: 1.3em;
+        }
+    </style>
 </head>
 <body>
-    <h1>Aprendiendo JavaScript</h1>
-    <script src="./scripts.js"></script>
+    <div id="numbers"></div>
+    <div id="result"></div>
+
+    <script src="./exercise1.js"></script>
 </body>
 </html>
